--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^4.22.7",
+    "axios": "^0.27.2",
     "mockjs": "^1.1.0",
     "next": "12.2.5",
     "react": "18.2.0",
