--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^4.22.7",
     "axios": "^0.27.2",
+    "iron-session": "^6.2.1",
     "mockjs": "^1.1.0",
     "next": "12.2.5",
     "react": "18.2.0",
