--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "axios": "^0.27.2",
     "iron-session": "^6.2.1",
     "mockjs": "^1.1.0",
+    "mysql2": "^2.3.3",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.54.5"
+    "reflect-metadata": "^0.1.13",
+    "sass": "^1.54.5",
+    "typeorm": "^0.3.10"
   },
   "devDependencies": {
     "@types/mockjs": "^1.0.6",
