--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,9 @@
+DATABASE_TYPE=mysql
+DATABASE_HOST=localhost
+DATABASE_PORT=3306
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=
+DATABASE_NAME=peelzhou
+
 SESSION_COOKIE_NAME=sid
 SESSION_PASSWORD=hkg7PxLSv4zU53Zx36RjhfU6x5LPaHLz
