--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.19.3",
+    "@uiw/react-md-editor": "3.6.0",
     "antd": "^4.22.7",
     "axios": "^0.27.2",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "iron-session": "^6.2.1",
+    "mobx": "^6.6.2",
+    "mobx-react-lite": "^3.4.0",
     "mockjs": "^1.1.0",
     "mysql2": "^2.3.3",
     "next": "12.2.5",
     "next-cookie": "^2.8.0",
+    "next-remove-imports": "^1.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
